Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3546

2.4.0<->2.3 interop: sanity test 56w: MDS unknown opcode 61

XMLWordPrintable

    • 3
    • 8924

      sanity test 56w hung as follows:

      == sanity test 56w: check lfs_migrate -c stripe_count works == 00:42:51 (1372405371)
      /usr/bin/lfs_migrate -y -c 6 /mnt/lustre/d0.sanity/d56w/file1
      

      Console log on the MDS showed that:

      00:39:22:Lustre: DEBUG MARKER: == sanity test 56w: check lfs_migrate -c stripe_count works == 00:42:51 (1372405371)
      00:39:44:LustreError: 14887:0:(mdt_handler.c:3026:mdt_msg_check_version()) MDS unknown opcode 61
      00:39:44:LustreError: 14887:0:(mdt_handler.c:3065:mdt_handle0()) mdt drops mal-formed request
      00:40:25:Lustre: lustre-MDT0000: Client ca0ab3a3-a02f-6aeb-30e4-9241dc18b04d (at 10.10.4.121@tcp) reconnecting
      00:40:25:LustreError: 22982:0:(mdt_handler.c:3026:mdt_msg_check_version()) MDS unknown opcode 61
      00:40:25:LustreError: 22982:0:(mdt_handler.c:3065:mdt_handle0()) mdt drops mal-formed request
      00:41:07:Lustre: lustre-MDT0000: Client ca0ab3a3-a02f-6aeb-30e4-9241dc18b04d (at 10.10.4.121@tcp) reconnecting
      00:41:07:LustreError: 14887:0:(mdt_handler.c:3026:mdt_msg_check_version()) MDS unknown opcode 61
      00:41:07:LustreError: 14887:0:(mdt_handler.c:3065:mdt_handle0()) mdt drops mal-formed request
      00:41:49:Lustre: lustre-MDT0000: Client ca0ab3a3-a02f-6aeb-30e4-9241dc18b04d (at 10.10.4.121@tcp) reconnecting
      

      Maloo report: https://maloo.whamcloud.com/test_sets/0219094e-e0f0-11e2-b3fd-52540035b04c

            jay Jinshan Xiong (Inactive)
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: